apps/pk8s/code-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: code-server
  name: code-server
  namespace: tw
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: code-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: code-server
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Europe/Madrid
            - name: PROXY_DOMAIN
              value: coder.torreviejawireless.org
            - name: PASSWORD
              valueFrom:
                secretKeyRef:
                  name: code-server
                  key: PASSWORD
            - name: SUDO_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: code-server
                  key: SUDO_PASSWORD
          image: lscr.io/linuxserver/code-server:latest
          name: code-server
          ports:
            - containerPort: 8443
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: code-server-config
            - mountPath: /config/workspace
              name: code-server-workspace
              subPath: workspace
      restartPolicy: Always
      volumes:
        - name: code-server-config
          persistentVolumeClaim:
            claimName: code-server-config
        - name: code-server-workspace
          persistentVolumeClaim:
            claimName: vseva-remote
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: code-server
  name: code-server
  namespace: tw
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8443
  type: ClusterIP
  selector:
    io.kompose.service: code-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server
  namespace: tw
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirectscheme@kubernetescrd,traefik-internal-ipwhitelist@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - code.torreviejawireless.org
      secretName: tw-tls
  rules:
    - host: code.torreviejawireless.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: code-server
                port:
                  name: http
