apps/pk8s/traefik.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tw
  namespace: tw
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cloud.torreviejawireless.org`)
      kind: Rule
      services:
        - name: nextcloud
          kind: Service
          port: 8080
    - match: Host(`traefik.torreviejawireless.org`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      middlewares:
        - name: internal-ipwhitelist
          namespace: traefik
      services:
        - kind: TraefikService
          name: api@internal
          namespace: traefik
    - match: Host(`mirror.torreviejawireless.org`)
      kind: Rule
      middlewares:
        - name: internal-ipwhitelist
          namespace: traefik
      services:
        - name: sipwise-mirror-nginx
          kind: Service
          port: 80
    - match: Host(`panel.torreviejawireless.org`) && PathPrefix(`/bazarr`)
      kind: Rule
      middlewares:
        - name: internal-ipwhitelist
          namespace: traefik
      services:
        - name: bazarr
          kind: Service
          port: 80
          namespace: plex
    - match: Host(`panel.torreviejawireless.org`) && PathPrefix(`/prowlarr`)
      kind: Rule
      middlewares:
        - name: internal-ipwhitelist
          namespace: traefik
      services:
        - name: prowlarr
          kind: Service
          port: 80
          namespace: plex
    - match: Host(`panel.torreviejawireless.org`) && PathPrefix(`/sonarr`)
      kind: Rule
      middlewares:
        - name: internal-ipwhitelist
          namespace: traefik
      services:
        - name: sonarr
          kind: Service
          port: 80
          namespace: plex
  tls:
    secretName: tw-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tw-http
  namespace: tw
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`mirror.torreviejawireless.org`)
      kind: Rule
      middlewares:
        - name: internal-ipwhitelist
          namespace: traefik
      services:
        - name: sipwise-mirror-nginx
          kind: Service
          port: 80
    - match: HostRegexp(`{host:.+}`)
      kind: Rule
      middlewares:
        - name: redirectscheme
          namespace: traefik
      services:
        - name: noop@internal
          kind: TraefikService
          namespace: traefik
